--- a/server/public/index.html
+++ b/server/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script src="https://kit.fontawesome.com/64ac632e6f.js"></script>
   <link rel="stylesheet" href="mikey.css">
   <title>UnBeerAble</title>
 </head>
